# containers

./: .pre-commit-config.yaml  README.md  renovate.json
.github/: matrix.py
.github/workflows/: build-image.yaml  detect-changes.yaml
kubectl/: Dockerfile  README.md  versions.yaml
maintenance-page/: Dockerfile  README.md  versions.yaml
maintenance-page/src/: index.html
maintenance-page/src/styles/: styles.css
odoo-kopia-snapshot/: Dockerfile  README.md  backup.py  entrypoint.sh  generate_backup_cronjob.py  generate_restore_job.py  pyproject.toml  restore.py  versions.yaml
odoo-kopia-snapshot/src/odoo_kopia_snapshot/: backup.py  generate_backup_cronjob.py  generate_restore_job.py  kube.py  list.py  restore.py  utils.py
odoo-kopia-snapshot/tests/: conftest.py  test_generate_backup.py  test_generate_restore.py  test_kube.py  test_utils.py
odoo-rapid-quant/: Dockerfile  README.md  entrypoint.sh  versions.yaml
psql/: Dockerfile  README.md  versions.yaml
