[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odoo-kopia-snapshot"
version = "2.0.1"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
]

[project.scripts]
backup = "odoo_kopia_snapshot.backup:main"
restore = "odoo_kopia_snapshot.restore:main"
list-snapshots = "odoo_kopia_snapshot.list:main"
generate-backup-cronjob = "odoo_kopia_snapshot.generate_backup_cronjob:main"
generate-restore-job = "odoo_kopia_snapshot.generate_restore_job:main"

[dependency-groups]
dev = [
    "pytest",
]
